--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "mocha": "~1.19.0"
+    "mocha": "~1.19.0",
+    "mockti": "~1.1.1"
   },
   "dependencies": {}
 }
